resources/sass/calendar/inputs.scss
/* ... */
.layout {
    padding-left: 1rem !important;

    .image {
        position: relative;
        max-width: 100%;
        overflow: hidden;
    }

    .img_fade {
        height: 100%;
        position: absolute;
        right: 0;
        top: 0;
        bottom: 0;
        width: 24px;
        background-image: linear-gradient(to left, $modal-content-bg-color, transparent);
    }
}

.pagination-navigation {
    &.disabled {
        background-color: transparent;
    }

    &:not(.disabled):hover{
        background-color: $modal-accent-hover-background;
        color: white;
    }
}

.pagination-number {
    border-radius: 0;
    border: 0;
    border-top: 4px solid transparent;
    border-bottom: 4px solid transparent;
    background-color: transparent;
}

.pagination-number-active {
    border-top: 4px solid $modal-accent-background;
}


/* ------------------ Event forms ----------------- */

#event_comment_mastercontainer .trumbowyg{
    height: 150px;
    max-height: 150px;
    min-height: 150px;
}

#event_comment_mastercontainer .trumbowyg-editor {
    min-height: calc(100% - 37px);
    background-color: white;
}

.loading{
    background-image: url('/resources/icons/loader_black.png');
    height:35px;
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
}

#event_comments.empty{
    font-style: italic;
}

#event_comments{
    display: flex;
    flex-direction: column;
    width:100%;
}

.event_comment{
    margin-bottom:0.5em;
    padding: 1rem;
    border: 1px solid $calendar-border-color;
}

.event_comment.calendar_owner .username{
    font-weight:800;
}

.event_comment.comment_owner{
    background-color: $bg-gray-200;
}

.event_comment:last-child{
    margin-bottom:0;
}

.event_comment p:first-child{
    margin-bottom:0.5em;
}

.event_comment p{
    margin: 0;
    padding: 0;
    line-height: 1.2rem;
    font-size: 1.1rem;
}

.event_comment .username{
    font-style: italic;
    font-size:0.75em;
}

.event_comment .date{
    font-style: italic;
    color: $main-text-color;
    font-size: .7rem;
}

.event_desc {
    overflow-x: auto;
}

.event_desc * {
    max-width: 100%;
}

.close-ui-btn-bg{
    position:absolute;
    right: -20px;
    top: -16.5px;
    width:60px;
    height:60px;
    border-radius: 30px;
    background-color: $modal-bg-color;
}

.close_ui_btn{
    position:absolute;
    right: -15px;
    top: -11px;
    font-size: 50px;
    color:#E53935;
    cursor: pointer;
}

.close_ui_btn:hover{
    color:#B71C1C;
}

.view_event_btn, .edit_event_btn {
    font-size:1.5rem;
    opacity:0.35;
    margin-left:0.5rem;
    &:hover {
        opacity:1.0;
        cursor: pointer;
    }
}


@media screen and (max-width: 768px) {
    .clickable_background {
        width: auto;
    }

    .modal-basic-wrapper {
        margin: 0;
    }

    .close-ui-btn-bg {
        top: 0;
        right: 0;
        border-radius: 0;
        background-color: transparent;
    }

    .close_ui_btn {
        top: 17px;
        right: 6px;
        z-index: 100;
    }

    .modal-wrapper {
        position:relative;
        max-width: 100vw;
        min-width: 100vw;
        padding: 0.5rem;
        margin: 0 auto;
        background-color: $card-bg-color;
        border: none;
        border-radius:0px;

        .form-control {
            height: auto;
        }
    }
}

.modal-form-heading{
    margin-top:10px;
}

.event_desc.editable{
    height:100px;
}

.event_desc > :last-child { margin-bottom: 0 !important; margin-right: 0 !important; }

.group_list_root ol{
    padding-inline-start:0;
    margin-block-end:0;
}

.group_list_root li{
    list-style-type: none;
}

ol.example li.placeholder {
    position: relative;
}

ol.example li.placeholder:before {
    position: absolute;
}

.group{
    display: inline-flex;
    justify-content: center;
    align-self: center;
    flex-wrap:wrap;
    margin-bottom:5px;
    width:100%;
}

.group .handle{
    flex: 1;
    flex-grow:0;
}

.group > .group_list{
    flex: 1;
    order:2;
    min-height:34px;
    border:1px solid black;
    border-radius: 5px;
    padding: 5px 5px 0;
    margin-bottom:5px;
}

.group_type.not ~ .group_list{
    background-color:rgb(200,150,150);
}

.group_type{
    width:100%;
    height:30px;
    padding-left:34px;
    font-weight: 800;
    display: -webkit-box;
    display: -moz-box;
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;
    margin:5px 0;
}

.group_type div{
    padding:5px;
    display: inline-flex;
    margin-right:15px;
}

.group_type label{
    cursor: pointer;
    border-radius: 5px;
    margin-right: 5px;
}

.group_type div input[type='radio']{
    margin-right:5px;
}

.group_type div input[type='number']{
    width:5em;
    height:100% !important;
}


.group_type[type='normal'] ~ .group_list{
    background-color:rgb(200,200,200);
}
.group_type[type='normal'] div.normal{
    background-color:rgb(200,200,200);
    border:1px solid black;
    border-radius: 10px;
    margin:-1px 14px -1px -1px;
}

.group_type[type='not'] ~ .group_list{
    background-color:rgb(200,150,150);
}
.group_type[type='not'] div.not{
    background-color:rgb(200,150,150);
    border:1px solid black;
    border-radius: 10px;
    margin:-1px 14px -1px -1px;
}

.group_type[type='num']  ~ .group_list{
    background-color:rgb(150,150,220);
}
.group_type[type='num'] div.num{
    background-color:rgb(150,150,220);
    border:1px solid black;
    border-radius: 10px;
    margin:-1px 14px -1px -1px;
}

.group .condition_operator{
    flex:0 1 100%;
    order:3;
}

.condition{
    margin-bottom:5px;
}

.condition:last-child{
    margin-bottom:0;
}
/* ... */

